# Dual3DEyeTracker

./: .gitignore  CMakeLists.txt  EyeDetector.sln
EyeDetector/: CMakeLists.txt  EyeDetector.vcxproj  EyeDetector.vcxproj.filters  converter.h  eye_cameras.h  eye_model_updater.cpp  eye_model_updater.h  pupilFitter.h  tracker.cpp  tracker.h  ubitrack_util.h  wrapper.cpp
Python/: Python.pyproj  main.py  measure.py  plot.py
